[tool.poetry]
name = "lisp-ast"
version = "0.1.0"
description = ""
authors = ["TimothePearce <timothe.pearce@gmail.com>"]
readme = "README.md"
packages = [{include = "lisp_ast"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
